Refactor Nvidia tests to use Matchers for assertions and improve documentation in NvidiaActionVisitor